--- a/Soccer/Views/_ViewImports.cshtml
+++ b/Soccer/Views/_ViewImports.cshtml
@@ -1,4 +1,3 @@
-﻿
+﻿@using Soccer
+@using Soccer.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-<!--импортируем tag-хелперы проекта-->
-@addTagHelper *, Soccer
